# aclswarm

./: .gitignore  .onboard.rosinstall  .onboard.ssh.rosinstall  .simulation.rosinstall  .simulation.rosinstall.https  LICENSE.md  README.md
aclswarm/: CMakeLists.txt  package.xml  setup.py
aclswarm/cfg/: controls.perspective  multiplot_vehicletracker_sq01s.xml  multiplot_xyvel.xml
aclswarm/include/aclswarm/: admm.h  assignment.h  auctioneer.h  comm_layer.h  coordination_ros.h  distcntrl.h  localization_ros.h  safety.h  utils.h  vehicle_tracker.h
aclswarm/launch/: coordination.launch  localization.launch  operator.launch  review.launch  snapstack_cntrl.launch  start.launch
aclswarm/lib/admm/: CMakeLists.txt
aclswarm/lib/admm/doc/: .gitignore  clean_latex.sh  refs.bib  report.tex
aclswarm/lib/admm/include/admm/: solver.h
aclswarm/lib/admm/src/: solver.cpp
aclswarm/lib/codegen_admm/: CMakeLists.txt  README.md
aclswarm/lib/codegen_admm/ADMMGainDesign3D/: ADMMGainDesign2D.cpp  ADMMGainDesign2D.h  ADMMGainDesign3D.cpp  ADMMGainDesign3D.h  ADMMGainDesign3D_data.cpp  ADMMGainDesign3D_data.h  ADMMGainDesign3D_emxAPI.cpp  ADMMGainDesign3D_emxAPI.h  ADMMGainDesign3D_emxutil.cpp  ADMMGainDesign3D_emxutil.h  ADMMGainDesign3D_initialize.cpp  ADMMGainDesign3D_initialize.h  ADMMGainDesign3D_rtw.mk  ADMMGainDesign3D_rtwutil.cpp  ADMMGainDesign3D_rtwutil.h  ADMMGainDesign3D_terminate.cpp  ADMMGainDesign3D_terminate.h  ADMMGainDesign3D_types.h  CXSparseAPI.cpp  CXSparseAPI.h  abs.cpp  abs.h  anyNonFinite.cpp  anyNonFinite.h  bigProduct.cpp  bigProduct.h  binOp.cpp  binOp.h  colon.cpp  colon.h  diag.cpp  diag.h  diag1.cpp  diag1.h  eig.cpp  eig.h  fillIn.cpp  fillIn.h  find.cpp  find.h  (+89 more)
aclswarm/lib/codegen_admm/ADMMGainDesign3D/CXSparse/CXSparseSupport/: makeCXSparseMatrix.h  solve_from_lu.c  solve_from_lu.h  solve_from_qr.c  solve_from_qr.h  unpackCXStruct.h
aclswarm/lib/codegen_admm/ADMMGainDesign3D/CXSparse/Include/: cs.h
aclswarm/lib/codegen_admm/ADMMGainDesign3D/CXSparse/Source/: cs_add_ci.c  cs_add_ci.cpp  cs_add_ri.c  cs_add_ri.cpp  cs_amd_ci.c  cs_amd_ci.cpp  cs_amd_ri.c  cs_amd_ri.cpp  cs_chol_ci.c  cs_chol_ci.cpp  cs_chol_ri.c  cs_chol_ri.cpp  cs_cholsol_ci.c  cs_cholsol_ci.cpp  cs_cholsol_ri.c  cs_cholsol_ri.cpp  cs_compress_ci.c  cs_compress_ci.cpp  cs_compress_ri.c  cs_compress_ri.cpp  cs_counts_ci.c  cs_counts_ci.cpp  cs_counts_ri.c  cs_counts_ri.cpp  cs_cumsum_ci.c  cs_cumsum_ri.c  cs_dfs_ci.cpp  cs_dfs_ri.c  cs_dmperm_ci.c  cs_dmperm_ri.c  cs_droptol_ci.cpp  cs_droptol_ri.cpp  cs_dropzeros_ci.c  cs_dropzeros_ri.c  cs_dupl_ci.c  cs_dupl_ci.cpp  cs_dupl_ri.c  cs_dupl_ri.cpp  cs_entry_ci.cpp  cs_entry_ri.cpp  (+116 more)
aclswarm/matlab/: .gitignore  Benchmark.m  Debug.m  FormCtrl.m  FormCtrlDynam.m  README.md  createGainMatrix.m  formgen.m  mitacl100.m  precalc_gains.m  test_alignment.m
aclswarm/matlab/CBAA/: CBAA_aclswarm.m  Rot.m  eval_assign.m  read_alignment.m  test_CBAA_aclswarm.m  test_alignment.m
aclswarm/matlab/Helpers/: ADMMGainDesign2D.m  ADMMGainDesign3D.m  A_C2R.m  C2R.m  ColAvoid.m  FindGains.m  FindGains3D.m  SDPGainDesign2D.m  SDPGainDesign3D.m  SDPGainDesign3D_Original.m  Sys.m  SysDynam.m  arun.m
aclswarm/matlab/Hungarian/: Hungarian.m  Hungarian_aclswarm.m
aclswarm/nodes/: operator.py  review_bag.py  viz_commands.py
aclswarm/param/: formations.yaml  vehicles.yaml
aclswarm/scripts/: bag_record.sh  init_vislam.sh  operator.py  remote_start.sh  sf_install_deps.sh  sim_start.sh
aclswarm/src/: admm.cpp  assignment.cpp  auctioneer.cpp  comm_layer.cpp  coordination_node.cpp  coordination_ros.cpp  distcntrl.cpp  localization_node.cpp  localization_ros.cpp  safety.cpp  safety_node.cpp  vehicle_tracker.cpp
aclswarm/src/aclswarm/: assignment.py  control.py
aclswarm/test/: test_admm.cpp
aclswarm_msgs/: CMakeLists.txt  package.xml
aclswarm_msgs/msg/: CBAA.msg  Formation.msg  SafetyStatus.msg  VehicleEstimates.msg
aclswarm_sim/: CMakeLists.txt  package.xml
aclswarm_sim/config/: aclswarm.rviz
aclswarm_sim/launch/: headless_operator.launch
aclswarm_sim/matlab/: analyze_simtrials.m  readACLBag.m
aclswarm_sim/matlab/trials/: .gitignore
aclswarm_sim/nodes/: generate_random_formation.py  supervisor.py
aclswarm_sim/param/: formations.yaml
aclswarm_sim/scripts/: bag_record.sh  start.sh  trial.sh  trials.sh
