<?xml version="1.0"?>
<package format="2">
  <name>aclswarm</name>
  <version>0.0.0</version>
  <description>ACL Swarm: a distributed pipeline for visual-intertial formation flying</description>

  <maintainer email="plusk@mit.edu">Parker Lusk</maintainer>
  <maintainer email="samirw@mit.edu">Samir Wadhwania</maintainer>
  <maintainer email="xyc@mit.edu">Jeremy Cai</maintainer>
  <maintainer email="aleix@mit.edu">Aleix Paris</maintainer>
  <maintainer email="kavehf@mit.edu">Kaveh Fathian</maintainer>

  <license>MIT</license>

  <url type="website">https:github.com/mit-acl/pgswarm</url>

  <depend>message_runtime</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>acl_msgs</depend>
  <depend>aclswarm_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
