<?xml version="1.0"?>
<package format="2">
  <name>aclswarm_sim</name>
  <version>0.0.0</version>
  <description>Simulation configurations for aclswarm</description>

  <maintainer email="plusk@mit.edu">Parker Lusk</maintainer>
  <maintainer email="samirw@mit.edu">Samir Wadhwania</maintainer>
  <maintainer email="xyc@mit.edu">Jeremy Cai</maintainer>
  <maintainer email="aleix@mit.edu">Aleix Paris</maintainer>
  <maintainer email="kavehf@mit.edu">Kaveh Fathian</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>aclswarm</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>aclswarm_msgs</depend>
  <depend>snapstack_msgs</depend>
  <depend>behavior_selector</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
